# clean_dynamodb_store

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT.md  README.md
src/: README.md  chunking.rs  delete_item.rs  error.rs  lib.rs  put_item.rs  retry.rs  store.rs
src/store/: batch.rs  mod.rs  query.rs  scan.rs  single.rs  table_bound.rs  update.rs
