[package]
name = "clean_dynamodb_store"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.20.0", features = [
  "behavior-version-latest",
] }
