[package]
name = "clean_dynamodb_store"
version = "0.0.2"
edition = "2021"
authors = ["Ivan Videnovic"]
description = "A library which follows clean architecture principles and provides a DynamoDB store implementation."
keywords = ["aws", "dynamodb", "store", "clean-architecture", "database"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.20.0", features = [
  "behavior-version-latest",
] }
